# thrift-mock

./: .gitignore  README.md  pyproject.toml
src/thrift_mock/: cli.py  defaults.py  handler.py  orchestrator.py  overrides.py  parser.py  server.py
tests/: client.py  test_cli_timeout.py  test_phase1_integration.py  test_phase2_overrides.py  test_phase3_orchestration.py  test_server_timeout.py
tests/fixtures/: exception_overrides.yaml  manifest.yaml  manifest_bad_server.yaml  manifest_with_overrides.yaml  simple_overrides.yaml  simple_service.thrift  test_overrides.yaml  test_service.thrift
